fix spacing, grammar

--- a/app/globalsV2.css
+++ b/app/globalsV2.css
@@ -3,6 +3,12 @@
 
 @custom-variant reveal-false ([data-reveal="false"] &);
 
+@custom-variant touch {
+  @media ((any-hover: none) and (any-pointer: coarse)) {
+    @slot;
+  }
+}
+
 /* *:not(:has(border-none)) {
   border: 1px dotted red;
 } */
@@ -33,7 +39,7 @@ html {
     0px 2px 2px -1.5px rgba(0, 0, 0, 0.32), 0px 4.4px 4.4px -2.25px rgba(0, 0, 0, 0.3), 0px 9.8px 9.8px -3px rgba(0, 0, 0, 0.25),
     0px 25px 25px -3.75px rgba(0, 0, 0, 0.11), 0px -5px 5px -3.75px rgba(0, 0, 0, 0.11);
 }
-
+/* 
 @keyframes customBounce {
   0%,
   25%,
@@ -50,7 +56,7 @@ html {
     transform: translateY(1px);
     background-color: #aaaaaa;
   }
-}
+} */
 
 @keyframes fill-from-left {
   0%,
@@ -109,12 +115,12 @@ html {
 
   body[data-mobile-menu="closed"] {
     .bounce > span {
-      animation: customBounce 2s cubic-bezier(0.8, 0.5, 0.2, 1.4) infinite;
-      animation-delay: var(--delay, 0s);
+      /* animation: customBounce 2s cubic-bezier(0.8, 0.5, 0.2, 1.4) infinite;
+      animation-delay: var(--delay, 0s); */
       height: 0.375rem;
       width: 0.375rem;
       border-radius: 100px;
-      background-color: black;
+      background-color: var(--color-gray-500);
     }
     .mobile-menu-container {
       pointer-events: none;
@@ -344,7 +350,7 @@ html {
   @media (max-width: 540px) {
     .large-brand-text {
       font-size: clamp(70px, 20vw, 120px);
-      line-height: 200%;
+      line-height: 220%;
     }
   }
 }
